--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button__position {
+    @apply absolute top-2/3 left-1/2 -translate-x-1/2;
+}
