Updating hover elements

--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.li__hover {
+    @apply hover:border-b-2 hover:border-b-black hover:border-solid box-border;
+}
+
 .button__position {
     @apply absolute top-2/3 left-1/2 -translate-x-1/2;
 }
