--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.header__li--style {
+    @apply border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover;
+}
+
 .li__hover {
     @apply hover:border-b-2 hover:border-b-black hover:border-solid box-border;
 }
