--- a/src/input.css
+++ b/src/input.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.header__li--style {
-    @apply border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover;
+/* .header__li--style {
+    @apply border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black;
 }
 
 .li__hover {
-    @apply hover: border-b-2 hover:border-b-black hover:border-solid box-border;
+    @apply hover:border-b-2 hover:border-b-black hover:border-solid box-border;
 }
 
 .button__position {
@@ -24,6 +24,6 @@
 
 
 /* Parceiros */
-.section__article--lg {
+/* .section__article--lg {
     @apply sm: w-8/12 lg:justify-center lg:w-96 lg:p-0 lg:h-70h lg:rounded lg:border-2 lg:border-slate-900 lg:border-solid;
-}
+} */
