--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.index__article--border {
+    @apply border-2 border-gray-800 border-solid rounded-lg w-11/12;
+}
+
 /* .header__li--style {
     @apply border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black;
 }
