--- a/src/input.css
+++ b/src/input.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .main__patrocinadores {
-    @apply bg-green-900 pt-8 w-full font-barlow flex flex-col items-center gap-y-8;
+    @apply bg-green-900 pt-8 w-full font-barlow flex flex-col items-center gap-y-8 lg:flex-row lg:justify-center lg:gap-x-10 flex-wrap;
 }
 
 .index__article--border {
-    @apply border-2 border-gray-800 border-solid rounded-lg h-96 w-11/12;
+    @apply border-2 border-gray-800 border-solid rounded-lg h-96 w-9/12;
 }
 
 .index__article--lg {
