--- a/src/input.css
+++ b/src/input.css
@@ -6,8 +6,12 @@
     @apply border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black;
 }
 
-.li__hover {
+.index__li--hover {
     @apply hover:border-b-2 hover:border-b-black hover:border-solid box-border;
+}
+
+.circuito__li--hover {
+    @apply hover:border-b-2 hover:border-b-white hover:border-solid box-border;
 }
 
 .main__container--images {
